--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -29,47 +29,50 @@
                 {% include 'project.html.twig' with { 'name': 'The Soccer Game', 'state': 'production', 'url': 'http://www.thesoccergame.de' } %}
             </div>
             <div class="col-md-4">
-                {% include 'project.html.twig' with { 'name': 'Star Commander', 'state': 'alpha', 'url': 'http://www.starcommander.net' } %}
+                {% include 'project.html.twig' with { 'name': 'Fateful Encounters', 'state': 'alpha', 'url': 'https://www.fatefulencounters.com' } %}
             </div>
         </div>
         <div class="row">
+            <div class="col-md-4">
+                {% include 'project.html.twig' with { 'name': 'Star Commander', 'state': 'alpha', 'url': 'http://www.starcommander.net' } %}
+            </div>
             <div class="col-md-4">
                 {% include 'project.html.twig' with { 'name': 'Casanova Story', 'state': 'alpha', 'url': 'http://casanovastory.com' } %}
             </div>
             <div class="col-md-4">
                 {% include 'project.html.twig' with { 'name': 'F-L-O-I-D', 'state': 'alpha', 'url': 'https://dmecke.github.io/ld34/' } %}
             </div>
+        </div>
+        <div class="row">
             <div class="col-md-4">
                 {% include 'project.html.twig' with { 'name': 'Snowboard Game', 'state': 'alpha', 'url': 'http://www.snowboardgame.net' } %}
             </div>
-        </div>
-        <div class="row">
             <div class="col-md-4">
                 {% include 'project.html.twig' with { 'name': 'Open Soccer Star', 'state': 'prototype', 'url': 'http://opensoccerstar.com' } %}
             </div>
             <div class="col-md-4">
                 {% include 'project.html.twig' with { 'name': 'Soccer Simulation', 'state': 'prototype', 'url': 'http://soccersim.playground.cunningsoft.de' } %}
             </div>
+        </div>
+        <div class="row">
             <div class="col-md-4">
                 {% include 'project.html.twig' with { 'name': 'Online Olympics', 'state': 'prototype', 'url': 'http://onlineolympics.playground.cunningsoft.de' } %}
             </div>
-        </div>
-        <div class="row">
             <div class="col-md-4">
                 {% include 'project.html.twig' with { 'name': 'Space Taxi', 'state': 'prototype', 'url': 'http://spacetaxi.playground.cunningsoft.de' } %}
             </div>
             <div class="col-md-4">
                 {% include 'project.html.twig' with { 'name': 'Scream', 'state': 'prototype', 'url': 'http://scream.playground.cunningsoft.de' } %}
             </div>
+        </div>
+        <div class="row">
             <div class="col-md-4">
                 {% include 'project.html.twig' with { 'name': 'Trade', 'state': 'prototype', 'url': 'http://trade.playground.cunningsoft.de' } %}
             </div>
-        </div>
-        <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-4">
                 {% include 'project.html.twig' with { 'name': 'Mad TV', 'state': 'prototype', 'url': 'http://madtv.playground.cunningsoft.de' } %}
             </div>
-            <div class="col-md-6">
+            <div class="col-md-4">
                 {% include 'project.html.twig' with { 'name': 'Toy Train', 'state': 'prototype', 'url': 'https://dmecke.github.io/toytrain/' } %}
             </div>
         </div>
