--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -76,6 +76,11 @@
                 {% include 'project.html.twig' with { 'name': 'Toy Train', 'state': 'prototype', 'url': 'https://dmecke.github.io/toytrain/' } %}
             </div>
         </div>
+        <div class="row">
+            <div class="col-md-4">
+                {% include 'project.html.twig' with { 'name': 'Up & Down', 'state': 'production', 'url': 'https://play.google.com/store/apps/details?id=com.cunningsoft.up_and_down' } %}
+            </div>
+        </div>
     </div>
     <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
