explicitly pass the image

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -12,73 +12,168 @@
         </div>
         <div class="row">
             <div class="col-md-4">
-                {% include 'project.html.twig' with { 'name': 'Onlinetennis', 'state': 'production', 'url': 'http://www.onlinetennis.net' } %}
+                {% include 'project.html.twig' with {
+                    'name': 'Onlinetennis',
+                    'state': 'production',
+                    'image': 'onlinetennis.jpg',
+                    'url': 'http://www.onlinetennis.net'
+                } %}
             </div>
             <div class="col-md-4">
-                {% include 'project.html.twig' with { 'name': 'Gladiatoren', 'state': 'production', 'url': 'http://www.gladiatoren.de' } %}
+                {% include 'project.html.twig' with {
+                    'name': 'Gladiatoren',
+                    'state': 'production',
+                    'image': 'gladiatoren.jpg',
+                    'url': 'http://www.gladiatoren.de'
+                } %}
             </div>
             <div class="col-md-4">
-                {% include 'project.html.twig' with { 'name': 'Castle Creepers', 'state': 'production', 'url': 'http://www.castlecreepers.com' } %}
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-4">
-                {% include 'project.html.twig' with { 'name': 'Combo Chaos', 'state': 'production', 'url': 'https://apps.facebook.com/combochaos' } %}
-            </div>
-            <div class="col-md-4">
-                {% include 'project.html.twig' with { 'name': 'The Soccer Game', 'state': 'production', 'url': 'http://www.thesoccergame.de' } %}
-            </div>
-            <div class="col-md-4">
-                {% include 'project.html.twig' with { 'name': 'Fateful Encounters', 'state': 'alpha', 'url': 'https://www.fatefulencounters.com' } %}
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-4">
-                {% include 'project.html.twig' with { 'name': 'Star Commander', 'state': 'alpha', 'url': 'http://www.starcommander.net' } %}
-            </div>
-            <div class="col-md-4">
-                {% include 'project.html.twig' with { 'name': 'Casanova Story', 'state': 'alpha', 'url': 'http://casanovastory.com' } %}
-            </div>
-            <div class="col-md-4">
-                {% include 'project.html.twig' with { 'name': 'F-L-O-I-D', 'state': 'alpha', 'url': 'https://dmecke.github.io/ld34/' } %}
+                {% include 'project.html.twig' with {
+                    'name': 'Castle Creepers',
+                    'state': 'production',
+                    'image': 'castlecreepers.jpg',
+                    'url': 'http://www.castlecreepers.com'
+                } %}
             </div>
         </div>
         <div class="row">
             <div class="col-md-4">
-                {% include 'project.html.twig' with { 'name': 'Snowboard Game', 'state': 'alpha', 'url': 'http://www.snowboardgame.net' } %}
+                {% include 'project.html.twig' with {
+                    'name': 'Combo Chaos',
+                    'state': 'production',
+                    'image': 'combochaos.jpg',
+                    'url': 'https://apps.facebook.com/combochaos'
+                } %}
             </div>
             <div class="col-md-4">
-                {% include 'project.html.twig' with { 'name': 'Open Soccer Star', 'state': 'prototype', 'url': 'http://opensoccerstar.com' } %}
+                {% include 'project.html.twig' with {
+                    'name': 'The Soccer Game',
+                    'state': 'production',
+                    'image': 'thesoccergame.jpg',
+                    'url': 'http://www.thesoccergame.de'
+                } %}
             </div>
             <div class="col-md-4">
-                {% include 'project.html.twig' with { 'name': 'Soccer Simulation', 'state': 'prototype', 'url': 'http://soccersim.playground.cunningsoft.de' } %}
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-4">
-                {% include 'project.html.twig' with { 'name': 'Online Olympics', 'state': 'prototype', 'url': 'http://onlineolympics.playground.cunningsoft.de' } %}
-            </div>
-            <div class="col-md-4">
-                {% include 'project.html.twig' with { 'name': 'Space Taxi', 'state': 'prototype', 'url': 'http://spacetaxi.playground.cunningsoft.de' } %}
-            </div>
-            <div class="col-md-4">
-                {% include 'project.html.twig' with { 'name': 'Scream', 'state': 'prototype', 'url': 'http://scream.playground.cunningsoft.de' } %}
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-4">
-                {% include 'project.html.twig' with { 'name': 'Trade', 'state': 'prototype', 'url': 'http://trade.playground.cunningsoft.de' } %}
-            </div>
-            <div class="col-md-4">
-                {% include 'project.html.twig' with { 'name': 'Mad TV', 'state': 'prototype', 'url': 'http://madtv.playground.cunningsoft.de' } %}
-            </div>
-            <div class="col-md-4">
-                {% include 'project.html.twig' with { 'name': 'Toy Train', 'state': 'prototype', 'url': 'https://dmecke.github.io/toytrain/' } %}
+                {% include 'project.html.twig' with {
+                    'name': 'Fateful Encounters',
+                    'state': 'alpha',
+                    'image': 'fatefulencounters.jpg',
+                    'url': 'https://www.fatefulencounters.com'
+                } %}
             </div>
         </div>
         <div class="row">
             <div class="col-md-4">
-                {% include 'project.html.twig' with { 'name': 'Up & Down', 'state': 'production', 'url': 'https://play.google.com/store/apps/details?id=com.cunningsoft.up_and_down' } %}
+                {% include 'project.html.twig' with {
+                    'name': 'Star Commander',
+                    'state': 'alpha',
+                    'image': 'starcommander.jpg',
+                    'url': 'http://www.starcommander.net'
+                } %}
+            </div>
+            <div class="col-md-4">
+                {% include 'project.html.twig' with {
+                    'name': 'Casanova Story',
+                    'state': 'alpha',
+                    'image': 'casanovastory.jpg',
+                    'url': 'http://casanovastory.com'
+                } %}
+            </div>
+            <div class="col-md-4">
+                {% include 'project.html.twig' with {
+                    'name': 'F-L-O-I-D',
+                    'state': 'alpha',
+                    'image': 'f-l-o-i-d.jpg',
+                    'url': 'https://dmecke.github.io/ld34/'
+                } %}
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                {% include 'project.html.twig' with {
+                    'name': 'Snowboard Game',
+                    'state': 'alpha',
+                    'image': 'snowboardgame.jpg',
+                    'url': 'http://www.snowboardgame.net'
+                } %}
+            </div>
+            <div class="col-md-4">
+                {% include 'project.html.twig' with {
+                    'name': 'Open Soccer Star',
+                    'state': 'prototype',
+                    'image': 'opensoccerstar.jpg',
+                    'url': 'http://opensoccerstar.com'
+                } %}
+            </div>
+            <div class="col-md-4">
+                {% include 'project.html.twig' with {
+                    'name': 'Soccer Simulation',
+                    'state': 'prototype',
+                    'image': 'soccersimulation.jpg',
+                    'url': 'http://soccersim.playground.cunningsoft.de'
+                } %}
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                {% include 'project.html.twig' with {
+                    'name': 'Online Olympics',
+                    'state': 'prototype',
+                    'image': 'onlineolympics.jpg',
+                    'url': 'http://onlineolympics.playground.cunningsoft.de'
+                } %}
+            </div>
+            <div class="col-md-4">
+                {% include 'project.html.twig' with {
+                    'name': 'Space Taxi',
+                    'state': 'prototype',
+                    'image': 'spacetaxi.jpg',
+                    'url': 'http://spacetaxi.playground.cunningsoft.de'
+                } %}
+            </div>
+            <div class="col-md-4">
+                {% include 'project.html.twig' with {
+                    'name': 'Scream',
+                    'state': 'prototype',
+                    'image': 'scream.jpg',
+                    'url': 'http://scream.playground.cunningsoft.de'
+                } %}
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                {% include 'project.html.twig' with {
+                    'name': 'Trade',
+                    'state': 'prototype',
+                    'image': 'trade.jpg',
+                    'url': 'http://trade.playground.cunningsoft.de'
+                } %}
+            </div>
+            <div class="col-md-4">
+                {% include 'project.html.twig' with {
+                    'name': 'Mad TV',
+                    'state': 'prototype',
+                    'image': 'madtv.jpg',
+                    'url': 'http://madtv.playground.cunningsoft.de'
+                } %}
+            </div>
+            <div class="col-md-4">
+                {% include 'project.html.twig' with {
+                    'name': 'Toy Train',
+                    'state': 'prototype',
+                    'image': 'toytrain.jpg',
+                    'url': 'https://dmecke.github.io/toytrain/'
+                } %}
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                {% include 'project.html.twig' with {
+                    'name': 'Up & Down',
+                    'state': 'production',
+                    'image': 'upanddown.jpg',
+                    'url': 'https://play.google.com/store/apps/details?id=com.cunningsoft.up_and_down'
+                } %}
             </div>
         </div>
     </div>
