--- a/templates/project.html.twig
+++ b/templates/project.html.twig
@@ -4,7 +4,7 @@
     </div>
     <div class="panel-body">
         <div class="thumbnail">
-            <img src="{{ name|lower|replace({' ': ''}) }}.jpg" alt="{{ name }}" />
+            <img src="{{ image }}" alt="{{ name }}" />
         </div>
     </div>
     <div class="panel-footer">
