--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -171,7 +171,7 @@
                 {% include 'project.html.twig' with {
                     'name': 'Up & Down',
                     'state': 'production',
-                    'image': 'upanddown.jpg',
+                    'image': 'upanddown.png',
                     'url': 'https://play.google.com/store/apps/details?id=com.cunningsoft.up_and_down'
                 } %}
             </div>
